page1.css
body {
    background-color: gray ;

}
p{
    color : white ;
}
h1{
    color : brown ;
    text-align : center ;
}
.content {
    height : 200px ;
    width : 200px ;
    background-color : chocolate;
    padding : 20px ;
    margin : 0px 20px ; 
    overflow-wrap: break-word
    
   

}
.c2{
    height : 200px ;
    width : 400px ;
    background-color : brown ;
    overflow-wrap: break-word
}

.o{
    display: flex ;
}
.c2{
    padding : 20px ;
}
button {
    background-color : gray ;
    color : white ;
    font-size : 15px ;
    border : 3px solid brown ;
    height : 50px ;
    width : 150px ;
}

